# creation_lib_C

./: README.md
audiocodec/: CMakeLists.txt  audiocodec.cpp  audiocodec.h  cyclic_buffer.cpp  example.cpp  ffmpegcodec.cpp  ffmpegcodec.h  ffmpegdecoder.cpp  ffmpegdecoder.h  ffmpegdecodermodule.cpp  ffmpegdecodermodule.h  ffmpegencodermodule.cpp  ffmpegencodermodule.h  ffmpegframe.cpp  ffmpegframe.h  ffmpegpacket.cpp  ffmpegpacket.h  ffmpegresampler.cpp  ffmpegresampler.h  multithreadbuffer.cpp  multithreadbuffer.h  outbuffermodule.cpp  outbuffermodule.h  parameters.h  parameters_rnnoise_off.h  plain_queue_buffer.cpp  plain_queue_buffer.h  queue_buffer.h  results.h  rnnoisemodule.cpp  rnnoisemodule.h  synctask.cpp  synctask.h  taskappendmodule.h  taskjoinmodule.h  taskoutbuffer.cpp  taskoutbuffer.h  taskstartmodule.h  test.h  threadsafe_queue_buffer.h  (+2 more)
